--- a/home/docker-compose.yaml
+++ b/home/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   homeassistant:
     image: ghcr.io/linuxserver/homeassistant
     container_name: homeassistant
-    env_file: .env
+    # env_file: .env
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -13,10 +13,15 @@ services:
     restart: ${RESTART_POLICY}
     networks:
       - intranet
+    labels:
+      - swag=enable
+      - swag_port=8123
+      - swag_proto=http
+      - swag_url=home.*
   grocy:
     image: lscr.io/linuxserver/grocy
     container_name: grocy
-    env_file: .env
+    # env_file: .env
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -24,10 +29,13 @@ services:
     volumes:
       - ${VOL_CONFIG}/grocy:/config
     restart: ${RESTART_POLICY}
-    # ports:
-    #   - ${GROCY_PORT_80}:80
+    ports:
+      - ${GROCY_PORT_80}:80
     networks:
       - intranet
+    labels:
+      - swag=enable
+
   mqtt:
     image: eclipse-mosquitto:latest
     container_name: "mqtt"
