Add db network command ro readme Clean up Configure authentik - wip Add SWAG labels to relevent services Create plex  gpu docker compose - wip Update media stack to run on gpu - wip Create sh script to create plex service Create portainer stack Add docker proxy service to web stack Remove env_file option from authentik, home and vault stacks

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     restart: ${RESTART_POLICY}
     networks:
       - db
+
   redis:
     user: "${PUID}:${PGID}"
     image: redis:latest
@@ -110,6 +111,12 @@ services:
       - db
     ports:
       - 18080:8080
+    labels:
+      - swag=enable
+      - swag_address=adminer
+      - swag_port=8080
+      - swag_proto=http
+      - swag_url=sql.prashantsolanki.com
 
 networks:
   intranet:
