--- a/web/.env.sample
+++ b/web/.env.sample
@@ -22,7 +22,12 @@ SWAG_DOCKER_MODS=
 SWAG_EMAIL=
 SWAG_EXTRA_DOMAINS=
 SWAG_DNSPLUGIN=
-
+SWAG_CF_ZONE_ID=
+SWAG_CF_ACCOUNT_ID=
+SWAG_CF_API_TOKEN=
+SWAG_CF_TUNNEL_NAME=
+SWAG_CF_TUNNEL_PASSWORD=
+SWAG_FILE__CF_TUNNEL_CONFIG=/config/tunnelconfig.yml
 
 ############# ENDLESSH #############
 ESSH_MSDELAY=10000 #optional
