--- a/code-server/.env.sample
+++ b/code-server/.env.sample
@@ -22,3 +22,6 @@ CODE_SERVER_SUDO_PASSWORD=
 CODE_SERVER_SUDO_PASSWORD_HASH=
 CODE_SERVER_PROXY_DOMAIN=
 CODE_SERVER_DOCKER_MODS=
+CODE_SERVER_SWAG_URL=code-server.domain.com
+
+MYSQL_WB_SWAG_URL=mysql-workbench.domain.com
