--- a/archive/swag/data/authelia/configuration.yml
+++ b/archive/swag/data/authelia/configuration.yml
@@ -6,7 +6,7 @@ server:
   path: "authelia"
 log_level: debug
 jwt_secret: somethingsomethingrandomrecret
-default_redirection_url: https://***REMOVED***
+default_redirection_url: https://
 # duo_api:
 #   hostname: api-somenumber.duosecurity.com
 #   integration_key: SOMESECRETKEY
@@ -30,8 +30,8 @@ access_control:
   default_policy: deny
   rules:
     - domain:
-      - ***REMOVED***
-      - "*.***REMOVED***"
+        - domain.com
+        - "*.domain.com"
       policy: two_factor
 session:
   name: authelia_session
@@ -39,7 +39,7 @@ session:
   expiration: 1h
   inactivity: 5m
   remember_me_duration: 1M
-  domain: ***REMOVED***
+  domain: domain.com
 regulation:
   max_retries: 3
   find_time: 2m
@@ -50,11 +50,11 @@ storage:
 # notifier:
 #   disable_startup_check: false
 #   smtp:
-#     username: ***REMOVED***
+#     username:
 #     password: longpassword
 #     host: smtp.gmail.com
 #     port: 587
-#     sender: ***REMOVED***
+#     sender:
 #     subject: "[Authelia] {title}"
 #     startup_check_address: test@authelia.com
 #     trusted_cert: ""
