Added cloudflare tunnel and flame dashboard

--- a/web/.env.sample
+++ b/web/.env.sample
@@ -5,42 +5,8 @@ TZ=Australia/Melbourne
 RESTART_POLICY=unless-stopped
 #----------------------------------
 
-############# PORTS #############
-AUTHELIA_PORT_9091=9091
-ENDLESSH_PORT_2222=22
-LS_DB_PORT=12345
-#----------------------------------
-
 ############# VOLUMES #############
 VOL_CONFIG=/mnt/dc-config
 
-############# SWAG #############
-SWAG_URL=
-SWAG_SUBDOMAINS=
-SWAG_VALIDATION=
-SWAG_DOCKER_MODS=
-SWAG_EMAIL=
-SWAG_EXTRA_DOMAINS=
-SWAG_DNSPLUGIN=
-SWAG_CF_ZONE_ID=
-SWAG_CF_ACCOUNT_ID=
-SWAG_CF_API_TOKEN=
-SWAG_CF_TUNNEL_NAME=
-SWAG_CF_TUNNEL_PASSWORD=
-SWAG_FILE__CF_TUNNEL_CONFIG=/config/tunnelconfig.yml
-
-############# ENDLESSH #############
-ESSH_MSDELAY=10000 #optional
-ESSH_MAXLINES=32 #optional
-ESSH_MAXCLIENTS=4096 #optional
-ESSH_LOGFILE=false #optional
-ESSH_BINDFAMILY= #optional
-
-
-############# LIBRESPEED #############
-LS_DB_TYPE=sqlite
-LS_DB_NAME=#optional
-LS_DB_HOSTNAME=#optional
-LS_DB_USERNAME=#optional
-LS_DB_PASSWORD=#optional
-LS_DB_PORT=#optional
+############# CloudFlare Tunnel #############
+TUNNEL_TOKEN=
