Add Tunnel Name to run cmd

--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   tunnel:
     container_name: tunnel
     image: cloudflare/cloudflared
-    command: tunnel run
+    command: tunnel run ${TUNNEL_NAME}
     secrets:
       - cf_tunnel_token
     environment:
