--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: tunnel
     image: cloudflare/cloudflared
     command: tunnel run ${TUNNEL_NAME}
+    volumes:
+      - ${VOL_CONFIG}/cloudflared:/etc/cloudflared/
     secrets:
       - cf_tunnel_token
     environment:
@@ -19,10 +21,10 @@ services:
     # ports:
     #   - 5005:5005
     secrets:
-      - flame_password # optional but required for (1)
+      - flame_password
     environment:
-      - PASSWORD_FILE=/run/secrets/flame_password # optional but required for (1)
-    restart: unless-stopped
+      - PASSWORD_FILE=/run/secrets/flame_password
+    restart: ${RESTART_POLICY}
   # heimdall:
   #   image: ghcr.io/linuxserver/heimdall
   #   container_name: heimdall
