Simplify web stack - Removed swag, dockerproy, heimdall - Moved nextcloud to vault (disabled)

--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -101,6 +101,20 @@ services:
       - swag=enable
       - swag_port=${HEDGEDOC_CMD_PORT}
       - swag_url=notes.*
+  # nextcloud:
+  #   image: ghcr.io/linuxserver/nextcloud
+  #   container_name: nextcloud
+  #   environment:
+  #     - PUID=${PUID}
+  #     - PGID=${PGID}
+  #     - TZ=${TZ}
+  #   volumes:
+  #     - ${VOL_CONFIG}/nextcloud/config:/config
+  #     - ${VOL_DOCUMENTS}/nextcloud:/data
+  #     - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
+  #   ports:
+  #     - ${NEXTCLOUD_PORT_443}:443
+  #   restart: ${RESTART_POLICY}
 
 networks:
   db:
