--- a/web/.env.sample
+++ b/web/.env.sample
@@ -3,31 +3,11 @@ PUID=1000
 PGID=1000
 TZ=Australia/Melbourne
 RESTART_POLICY=unless-stopped
-#----------------------------------
-
-############# PORTS #############
-AUTHELIA_PORT_9091=9091
-ENDLESSH_PORT_2222=22
-LS_DB_PORT=12345
+DOMAIN=example.com
 #----------------------------------
 
 ############# VOLUMES #############
 VOL_CONFIG=/mnt/dc-config
-
-############# SWAG #############
-SWAG_URL=
-SWAG_SUBDOMAINS=
-SWAG_VALIDATION=
-SWAG_DOCKER_MODS=
-SWAG_EMAIL=
-SWAG_EXTRA_DOMAINS=
-SWAG_DNSPLUGIN=
-SWAG_CF_ZONE_ID=
-SWAG_CF_ACCOUNT_ID=
-SWAG_CF_API_TOKEN=
-SWAG_CF_TUNNEL_NAME=
-SWAG_CF_TUNNEL_PASSWORD=
-SWAG_FILE__CF_TUNNEL_CONFIG=/config/tunnelconfig.yml
 
 ############# ENDLESSH #############
 ESSH_MSDELAY=10000 #optional
