Renamed code-server stack to dev Postrges placement role changes to manager Moved Adminer to dev stack Removed portainer from monitor stack Add bookstack and nextcloud to vault

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -76,7 +76,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == worker
+          - node.role == manager
   postgres-replica:
     user: "${PUID}:${PGID}"
     image: crunchydata/crunchy-postgres:centos8-13.6-4.7.5
@@ -103,20 +103,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == worker
-  adminer:
-    image: adminer
-    networks:
-      - intranet
-      - db
-    ports:
-      - 18080:8080
-    labels:
-      - swag=enable
-      - swag_address=adminer
-      - swag_port=8080
-      - swag_proto=http
-      - swag_url=${ADMINER_SWAG_URL}
+          - node.role == manager
 
 networks:
   intranet:
