--- a/vault/.env.sample
+++ b/vault/.env.sample
@@ -28,3 +28,10 @@ HEDGEDOC_DB_PORT=3306
 HEDGEDOC_CMD_DOMAIN=localhost
 HEDGEDOC_CMD_URL_ADDPORT=true #optional
 HEDGEDOC_CMD_PROTOCOL_USESSL=false #optional
+
+############ Bookstack ##################
+BOOKSTACK_APP_URL=
+BOOKSTACK_DB_HOST=
+BOOKSTACK_DB_USER=
+BOOKSTACK_DB_PASS=
+BOOKSTACK_DB_DATABASE=
