--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -1,40 +1,28 @@
-version: "3.7"
-services:
-  portainer-agent:
-    # user: "${PUID}:${PGID}"
-    image: portainer/agent:2.11.1
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
-    networks:
-      - intranet
-    deploy:
-      mode: global
-      placement:
-        constraints: [ node.hostname == docker-manager-3 ]
-  portainer-server:
-    # user: "${PUID}:${PGID}"
-    image: portainer/portainer-ce:2.11.1
-    command: -H tcp://tasks.portainer-agent:9001 --tlsskipverify
-    ports:
-      - "9443:9443"
-      - "9000:9000"
-      - "8000:8000"
-    volumes:
-      - ${VOL_CONFIG}/portainer:/data
-    networks:
-      - intranet
-    deploy:
-      mode: replicated
-      replicas: 1
-      placement:
-        constraints: [ node.hostname == docker-manager-2 ]
-    labels:
-      - swag=enable
-      - swag_port=9443
-      - swag_url=portainer.*
-      - swag_proto=https
+# version: "3.7"
+# services:
+#   portainer-agent:
+#     image: portainer/agent:2.11.1
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock
+#       - /var/lib/docker/volumes:/var/lib/docker/volumes
+#     deploy:
+#       mode: global
+#   portainer-server:
+#     image: portainer/portainer-ce:2.11.1
+#     command: -H tcp://tasks.portainer-agent:9001 --tlsskipverify
+#     # ports:
+#     #   - "9443:9443"
+#     #   - "9000:9000"
+#     #   - "8000:8000"
+#     volumes:
+#       - ${VOL_CONFIG}/portainer:/data
+#     deploy:
+#       mode: replicated
+#       replicas: 1
 
-networks:
-  intranet:
-    external: true
+# networks:
+#   default:
+#     external:
+#       name: intranet
+
+
