--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -101,20 +101,45 @@ services:
       - swag=enable
       - swag_port=${HEDGEDOC_CMD_PORT}
       - swag_url=notes.*
-  # nextcloud:
-  #   image: ghcr.io/linuxserver/nextcloud
-  #   container_name: nextcloud
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${PGID}
-  #     - TZ=${TZ}
-  #   volumes:
-  #     - ${VOL_CONFIG}/nextcloud/config:/config
-  #     - ${VOL_DOCUMENTS}/nextcloud:/data
-  #     - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
-  #   ports:
-  #     - ${NEXTCLOUD_PORT_443}:443
-  #   restart: ${RESTART_POLICY}
+  bookstack:
+    image: lscr.io/linuxserver/bookstack
+    container_name: bookstack
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+      - APP_URL=${BOOKSTACK_APP_URL}
+      - DB_HOST=${BOOKSTACK_DB_HOST}
+      - DB_USER=${BOOKSTACK_DB_USER}
+      - DB_PASS=${BOOKSTACK_DB_PASS}
+      - DB_DATABASE=${BOOKSTACK_DB_DATABASE}
+    volumes:
+      - ${VOL_CONFIG}/bookstack:/config
+    restart: unless-stopped
+    networks:
+      - intranet
+    labels:
+      - flame.type=app
+      - flame.name=bookstack
+      - flame.url=https://wiki.prashantsolanki.com
+      - flame.icon=custom
+  nextcloud:
+    image: ghcr.io/linuxserver/nextcloud
+    container_name: nextcloud
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+    volumes:
+      - ${VOL_CONFIG}/nextcloud:/config
+      - ${VOL_DOCUMENTS}/nextcloud:/data
+      - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
+    restart: ${RESTART_POLICY}
+    labels:
+      - flame.type=app
+      - flame.name=Drive
+      - flame.url=https://drive.prashantsolanki.com
+      - flame.icon=custom
 
 networks:
   db:
