--- a/essentials/docker-compose.yml
+++ b/essentials/docker-compose.yml
@@ -33,19 +33,23 @@ services:
     image: pawelmalak/flame
     container_name: flame
     hostname: flame
+    environment:
+      - DOCKER_HOST=dockerproxy
     volumes:
       - ${VOL_CONFIG}/flame:/app/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: ${RESTART_POLICY}
     deploy:
       mode: global
-  adminer:
-    image: adminer
-    networks:
-      - db
-    ports:
-      - 18080:8080
-
+  dockerproxy:
+    image: ghcr.io/tecnativa/docker-socket-proxy:latest
+    container_name: dockerproxy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    restart: unless-stopped
+    environment:
+      - CONTAINERS=1
+      - POST=0
 networks:
   default:
     external:
